# conversation-evaluation

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  run_server.bat
config/: metrics.json
resources/: conversation_extraction_query.sql  create_conversation_view.sql
resources/bruno/: bruno.json  env.dev.json  env.json  env.ppd.json  env.prd.json
resources/bruno/Error Cases/: Get Non-existent Job.bru  Start Evaluation (Invalid Parameters).bru  Stop Non-existent Job.bru  bruno.json
resources/bruno/Evaluation Management/: Get Evaluation Status.bru  List All Evaluations.bru  List Evaluations (Filtered by Date).bru  Start Evaluation (All Data).bru  Start Evaluation (Default).bru  Start Evaluation (Test Mode).bru  Stop Evaluation.bru  bruno.json
resources/bruno/Health & Info/: Get Configuration.bru  Get Metrics.bru  Root Endpoint.bru  bruno.json
src/: __init__.py  api.py  bigquery_client.py  config.py  evaluation_runner.py  job_store.py  llm_client.py  main.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_api_recalculate.py  test_bigquery_client.py  test_recalculate_behavior.py
